# ferry

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  electron-builder.yml  electron.vite.config.ts  handoff.md  optimization_results.md  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.claude/: PROJECT_MAP.md
.claude/architecture/: ferry-electron-backend-architecture.md  ferry-vue-frontend-architecture.md
.claude/plan/: ferry-connect-preload-plan.md  ferry-feature-round2-plan.md  ferry-feature-round3-plan.md  ferry-feature-round4-plan.md  ferry-feature-round5-plan.md  ferry-feature-round6-plan.md  ferry-implementation-plan.md  ferry-package-size-reduction-plan.md  ferry-perf-fileops-plan.md  ferry-security-perf-hardening-plan.md  ferry-smartscreen-signing-plan.md  ferry-winscp-parity-roadmap.md  (+1 more)
scripts/: measure-startup.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: settings_store.rs
src-tauri/src/bookmarks/: bookmark_store.rs  mod.rs
src-tauri/src/edit/: edit_session_manager.rs  mod.rs
src-tauri/src/fs/: local_fs.rs  mod.rs  remote_fs.rs
src-tauri/src/history/: history_store.rs  mod.rs
src-tauri/src/ipc/: commands.rs  mod.rs
src-tauri/src/monitor/: mod.rs  monitor_manager.rs
src-tauri/src/sites/: importer.rs
src-tauri/src/ssh/: known_hosts.rs  mod.rs  session_manager.rs
src-tauri/src/tail/: mod.rs  tail_manager.rs
src-tauri/src/terminal/: mod.rs  terminal_manager.rs
src-tauri/src/transfer/: mod.rs  transfer_queue.rs
(+166 files in other folders)
